https://jira.fingo.info/browse/IJ-225 Urlopia don't recognize freshly disabled users